turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: not found: value i
  i = 0
  ^Turmite:9: error: not found: value i
      i = col
      ^Turmite:12: error: not found: value i
  faire = rule(state)(i)
                      ^